# openfeeder

./: .gitignore  ADAPTER_DESIGN.md  ANALYTICS_DELIVERABLES.md  ANALYTICS_IMPLEMENTATION.md  ANALYTICS_PR_SUMMARY.md  ANALYTICS_SETUP.md  BLOG_POST.md  BUILT_WITH.md  CURL_TEST_EXAMPLES.md  GDPR_COMPLIANCE.md  LICENSE  OUTREACH_EMAIL_TEMPLATE.md  PROMOTION_STRATEGY.md  README.md  RELEASE_NOTES.md  SOCIAL_MEDIA_ASSETS_CHECKLIST.md  SUBMISSION_CHECKLIST.md  SUBMISSION_QUICK_START.txt  WEEK1_DEVTO_ARTICLE.md  WEEK1_HN_POST.md  WEEK1_LINKEDIN_POST.md  WEEK1_TWITTER_THREAD.md  WORDPRESS_ORG_SUBMISSION.md
adapters/: README.md
adapters/fastapi/: README.md  pyproject.toml
adapters/fastapi/openfeeder_fastapi/: __init__.py  chunker.py  gateway.py  gateway_session.py  models.py  router.py
adapters/fastapi/tests/: conftest.py  test_fastapi_adapter.py  test_gateway.py
cli/: README.md  package-lock.json  package.json
docs/: 01_IMPLEMENTATION_GUIDE.md  02_STEP_BY_STEP_TUTORIAL.md  03_SCHEMA_REFERENCE.md  04_CODE_EXAMPLES.md  05_TESTING_GUIDE.md  06_DEPLOYMENT_CHECKLIST.md  ANALYTICS.md  ANALYTICS_INTEGRATION.md  CURL_TEST_EXAMPLES.md  QUICK_REFERENCE.md  README.md
mcp/: README.md  package-lock.json  package.json  test.ts
sidecar/: ANALYTICS_FILES.md  ANALYTICS_READY_FOR_DEPLOYMENT.md  Dockerfile  README.md  adapters_google_analytics.py  adapters_plausible.py  adapters_umami.py  adapters_webhook.py  analytics-example.json  analytics.py  analytics_provider.py  analytics_service.py  chunker.py  crawler.py  dashboard_config.json  docker-compose.yml  indexer.py  main.py  (+10 more)
(+170 files in other folders)
